# Master

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  main.c
MicromouseFirmware/MicromouseFirmware/: MicromouseFirmware-Debug.vgdbsettings  MicromouseFirmware.vcxproj
MicromouseFirmware/MicromouseFirmware/VisualGDB/Debug/: MicromouseFirmware.alldeps  main.dep  main.gcc.rsp  startup_stm32l476xx.gcc.rsp  stm32l4xx_hal.gcc.rsp  stm32l4xx_hal_cortex.dep  stm32l4xx_hal_cortex.gcc.rsp  stm32l4xx_hal_dma.gcc.rsp  stm32l4xx_hal_gpio.gcc.rsp  stm32l4xx_hal_i2c.gcc.rsp  stm32l4xx_hal_i2c_ex.dep  stm32l4xx_hal_i2c_ex.gcc.rsp  stm32l4xx_hal_msp.dep  stm32l4xx_hal_msp.gcc.rsp  stm32l4xx_hal_pwr.dep  stm32l4xx_hal_pwr.gcc.rsp  stm32l4xx_hal_pwr_ex.gcc.rsp  stm32l4xx_hal_rcc.dep  stm32l4xx_hal_rcc.gcc.rsp  stm32l4xx_hal_rcc_ex.dep  stm32l4xx_hal_rcc_ex.gcc.rsp  stm32l4xx_hal_uart.dep  stm32l4xx_hal_uart.gcc.rsp  stm32l4xx_hal_uart_ex.dep  (+6 more)
MicromouseFirmware/VisualGDB/Debug/: MicromouseFirmware  MicromouseFirmware.link.rsp  MicromouseFirmware.mkbin.rsp
firmware/: firmware.gpdsc  firmware.ioc
firmware/Inc/: AL.h  PAL.h  PHIL.h  main.h
firmware/Inc/PAL/: ADC.h  ADC_Channel.h  TIM.h
firmware/Inc/PHIL/: Motor.h
firmware/Src/: AL.cpp  MicromouseFirmware.cpp  dma.c  main.c
firmware/Src/AL/: Robot.cpp
firmware/Src/PAL/: ADC.cpp  ADC_Channel.cpp  TIM.cpp
firmware/Src/PHIL/: Motor.cpp
firmware/VisualGDB/Debug/: firmware  firmware.link.rsp
firmware/firmware/: firmware.vcxproj  firmware.vcxproj.filters
src/main/qt/: .gitignore  default.pro  main.cpp  window.cpp  window.h
(+102 files in other folders)
